php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #33185 --enable-session=shared does not build
Submitted: 2005-05-30 16:37 UTC Modified: 2005-05-30 17:14 UTC
From: darryl-phpbugs at darrylmiles dot org Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.0.4 OS: Linux
Private report: No CVE-ID: None
 [2005-05-30 16:37 UTC] darryl-phpbugs at darrylmiles dot org
Description:
------------
Building with:

./configure --prefix=/opt/php5 --with-apxs2=/opt/apache2/bin/apxs --enable-memory-limit --enable-track-vars --enable-safe-mode --enable-shared=all --with-all=shared,all --with-mysql=shared --with-zlib=shared --with-openssl=shared --with-bz2=shared --with-gd=shared --with-freetype=shared --with-mssql=shared --with-snmp=shared --enable-sockets=shared --enable-session=shared  --enable-pcre=shared --enable-ob=shared --enable-posix=shared 2>&1 | tee  CONFIGURELOG

The "--enable-session=shared" causes the error with just "--enable-session" the build is ok.  I compile all my extensions as modules (like apache/httpd)

During linking:

ext/sqlite/sqlite.lo(.text+0x1376): In function `zm_startup_sqlite':
/usr2/BUILD/webtraffik/php-5.0.4/ext/sqlite/sqlite.c:1015: undefined reference to `php_session_register_module'
ext/sqlite/sess_sqlite.lo(.text+0x31e): In function `ps_gc_sqlite':
/usr2/BUILD/webtraffik/php-5.0.4/ext/sqlite/sess_sqlite.c:182: undefined reference to `ps_globals'
ext/sqlite/sess_sqlite.lo(.text+0x34f):/usr2/BUILD/webtraffik/php-5.0.4/ext/sqlite/sess_sqlite.c:182: undefined reference to `ps_globals'
ext/sqlite/sess_sqlite.lo(.data+0x1c): In function `ps_open_sqlite':
/usr2/BUILD/webtraffik/php-5.0.4/ext/sqlite/sess_sqlite.c:46: undefined reference to `php_session_create_id'
collect2: ld returned 1 exit status
make: *** [sapi/cli/php] Error 1



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-05-30 17:14 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

And quick fix for any PHP version: Don't compile ext/session as shared (it doesn't make any sense + you loose some functionality)

Extensions which should never be compiled as shared:
ext/pcre, ext/openssl..any extension used by other extensions.

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC