- Fixed bug #33185 (--enable-session=shared does not build)